[metadata]
name = pushjack
version = 1.5.0
author = Derrick Gilland
author_email = dgilland@gmail.com
url = https://github.com/dgilland/pushjack
description = Push notifications for APNS (iOS) and GCM (Android)
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = apns ios gcm android push notifications
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
install_requires =
    requests

[options.extras_require]
dev =
    coverage
    flake8
    httmock
    invoke
    mock
    pylint
    pytest
    pytest-cov
    Sphinx
    sphinx-rtd-theme
    tox
    twine
    wheel


[bdist_wheel]
universal = 1
